@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 f74a93a5772ef594ab6bb1096e470cc5b40e4618 ChangeLog
+SHA1 26d3a9dcfbad74779c488a72d87e040f3fbbe7e5 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 ada04fa7b579531634e376d6bd7ed96ea9ae6563 META.yml
+SHA1 6ad5be9cc9ca407f550b210761b4e8ff7b544f2c META.yml
 SHA1 971640082357606899d8c4bd8de932c11b10d9e9 Makefile.PL
 SHA1 9adf23fe6adb034c41f51c46c372e31d3dc45d3f README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 05b42cf61298cff0b763ce101fc24ab152be4d43 lib/Term/Menus.pm
+SHA1 a14631b39ce93dafaa4b14621708aca0b9b726f4 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkyP4sQACgkQdsVAdUjO9ImPDwCfec6BUe1OkeULCAKqjMndFDRp
-XjQAn2BIQxxfJwUD7qsGCy/X6f60/m9F
-=wlMA
+iEYEARECAAYFAkyQrZkACgkQdsVAdUjO9Il/jwCcDNdlgsjFpY7K1/vIKOI2E8xm
+x18AoI607k6dn5jm46PzpO+XIKUg1V11
+=lmfo
 -----END PGP SIGNATURE-----
