@@ -1,3 +1,12 @@
+2010-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.52 released.
+
+        * Using eval around GetTerminalSize so that CPAN
+          Testers automated tests won't break (somehow this
+          fix got overwritten from release 1.50)
+
+
 2010-09-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.51 released.
